--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /public/bundles/
 /var/
 /vendor/
+/.idea
 ###< symfony/framework-bundle ###
 
 ###> phpunit/phpunit ###
@@ -14,12 +15,11 @@
 .phpunit.result.cache
 ###< phpunit/phpunit ###
 
-###> symfony/phpunit-bridge ###
-.phpunit.result.cache
-/phpunit.xml
-###< symfony/phpunit-bridge ###
-
 ###> symfony/asset-mapper ###
 /public/assets/
 /assets/vendor/
 ###< symfony/asset-mapper ###
+
+###> phpstan/phpstan ###
+phpstan.neon
+###< phpstan/phpstan ###
