--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,3 +29,6 @@ jobs:
 
       - name: Run PHPstan
         run: ./vendor/bin/phpstan analyze
+
+      - name: Run PHP-CS-Fixer (lint)
+        run: ./vendor/bin/php-cs-fixer fix --diff --dry-run --allow-risky=yes
