--- a/composer.json
+++ b/composer.json
@@ -76,6 +76,8 @@
         "symfony/polyfill-php82": "*"
     },
     "scripts": {
+        "cs-fix": "php-cs-fixer fix --diff --dry-run --allow-risky=yes",
+        "cs-fix-apply": "php-cs-fixer fix",
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd",
@@ -99,6 +101,7 @@
     },
     "require-dev": {
         "ekino/phpstan-banned-code": "^2.1",
+        "friendsofphp/php-cs-fixer": "^3.64",
         "phpstan/extension-installer": "^1.4",
         "phpstan/phpstan": "^1.12",
         "phpstan/phpstan-doctrine": "^1.5",
