--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up PHP
-        uses: shivammathur/setup-php@2cb9b829437ee246e9b3cac53555a39208ca6d28
+        uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
           extensions: mbstring, intl, pdo_mysql
@@ -25,7 +25,7 @@ jobs:
         run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
 
       - name: Run PHPUnit tests
-        run: ./bin/phpunit --coverage-test
+        run: ./bin/phpunit tests
 
       - name: Run PHPstan
         run: ./vendor/bin/phpstan analyze
