feat: create the entity

--- a/composer.json
+++ b/composer.json
@@ -76,7 +76,7 @@
         "symfony/polyfill-php82": "*"
     },
     "scripts": {
-        "cs-fix": "php-cs-fixer fix --diff --dry-run --allow-risky=yes",
+        "cs-fix": "php-cs-fixer fix --diff --dry-run",
         "cs-fix-apply": "php-cs-fixer fix",
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
