--- a/compose.yaml
+++ b/compose.yaml
@@ -1,37 +1,31 @@
 
 services:
 ###> doctrine/doctrine-bundle ###
-  database:
-    image: postgres:${POSTGRES_VERSION:-16}-alpine
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
-      POSTGRES_USER: ${POSTGRES_USER:-app}
-    healthcheck:
-      test: ["CMD", "pg_isready", "-d", "${POSTGRES_DB:-app}", "-U", "${POSTGRES_USER:-app}"]
-      timeout: 5s
-      retries: 5
-      start_period: 60s
-    volumes:
-      - database_data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
-  pgadmin:
-    image: dpage/pgadmin4:8.12.0
-    container_name: pgadmin4_container
-    restart: always
+  frankenphp:
+    build: .
+    container_name: frankenphp
+    depends_on:
+      - database
     ports:
-      - "8888:80"
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${POSTGRES_USER:-app}@domain-name.com
-      PGADMIN_DEFAULT_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
+      - 8081:80
     volumes:
-      - pgadmin-data:/var/lib/pgadmin
+      - .:/var/www/html
+  phpmyadmin:
+    depends_on:
+      - database
+    image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin
+    links:
+      - database
+    restart: unless-stopped
+    ports:
+      - 8888:80
+    environment:
+      MYSQL_ROOT_PASSWORD: MySecretPassword
+      PMA_HOST: database
 
 volumes:
 ###> doctrine/doctrine-bundle ###
   database_data:
-  pgadmin-data:
+
 ###< doctrine/doctrine-bundle ###
