--- a/composer.json
+++ b/composer.json
@@ -40,11 +40,13 @@
         "symfony/translation": "7.1.*",
         "symfony/twig-bundle": "7.1.*",
         "symfony/ux-lazy-image": "^2.20",
+        "symfony/ux-toggle-password": "^2.21",
         "symfony/ux-turbo": "^2.20",
         "symfony/validator": "7.1.*",
         "symfony/web-link": "7.1.*",
         "symfony/yaml": "7.1.*",
         "symfonycasts/sass-bundle": "^0.7.0",
+        "symfonycasts/verify-email-bundle": "^1.17",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
