--- a/composer.json
+++ b/composer.json
@@ -105,6 +105,7 @@
         }
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^8.2",
         "doctrine/doctrine-fixtures-bundle": "^3.6",
         "ekino/phpstan-banned-code": "^2.1",
         "friendsofphp/php-cs-fixer": "^3.64",
