test: writing test for CreateAdminUserCommand

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,22 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:9.1.0
+        environment:
+          MYSQL_ROOT_PASSWORD: root_password
+          MYSQL_DATABASE: forgequest_db_test
+          MYSQL_USER: user_test
+          MYSQL_PASSWORD: password_test
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping -h localhost"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -24,7 +40,19 @@ jobs:
       - name: Install Composer dependencies
         run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
 
+      - name: Configure .env.test
+        run: |
+          echo "DATABASE_URL=mysql://user_test:password_test@127.0.0.1:3306/forgequest_db_test?serverVersion=8.0.37" > .env.test
+
+      - name: Run Doctrine migrations
+        run: ./bin/console doctrine:migrations:migrate --env=test --no-interaction
+
+      - name: Run fixtures
+        run: ./bin/console doctrine:fixtures:load --env=test
+
       - name: Run PHPUnit tests
+        env:
+          DATABASE_URL: mysql://user_test:password_test@127.0.0.1:3306/forgequest_db_test?serverVersion=8.0.37
         run: ./bin/phpunit tests
 
       - name: Run PHPstan
