--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
         run: ./bin/console doctrine:migrations:migrate --env=test --no-interaction
 
       - name: Run fixtures
-        run: ./bin/console doctrine:fixtures:load --env=test
+        run: ./bin/console doctrine:fixtures:load --env=test --no-interaction
 
       - name: Run PHPUnit tests
         env:
