--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,10 @@
         "symfony/yaml": "7.1.*",
         "symfonycasts/sass-bundle": "^0.7.0",
         "symfonycasts/verify-email-bundle": "^1.17",
+        "twig/cssinliner-extra": "^3.15",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/inky-extra": "^3.15",
+        "twig/markdown-extra": "^3.15",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
