--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,8 @@
 twig:
     file_name_pattern: '*.twig'
-    form_themes: ['form/my_form_theme.html.twig']
+    form_themes:
+        - '@FOSCKEditor/Form/ckeditor_widget.html.twig'
+        - 'form/my_form_theme.html.twig'
 
 when@test:
     twig:
