feat: create the uploading image
install and configure VichUploaderBundle

--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,8 @@
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/inky-extra": "^3.15",
         "twig/markdown-extra": "^3.15",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "vich/uploader-bundle": "^2.4"
     },
     "config": {
         "allow-plugins": {
