--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "symfony/string": "7.2.*",
         "symfony/translation": "7.2.*",
         "symfony/twig-bundle": "7.2.*",
+        "symfony/ux-chartjs": "^2.22",
         "symfony/ux-lazy-image": "^2.20",
         "symfony/ux-toggle-password": "^2.21",
         "symfony/ux-turbo": "^2.20",
