--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -9,3 +9,7 @@ vich_uploader:
             uri_prefix: /uploads/scenarios
             upload_destination: '%kernel.project_dir%/public/uploads/scenarios'
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+        univers_image:
+            uri_prefix: /uploads/univers
+            upload_destination: '%kernel.project_dir%/public/uploads/univers'
+            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
