--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,13 +45,18 @@ jobs:
           echo "DATABASE_URL=mysql://user_test:password_test@127.0.0.1:3306/forgequest_db?serverVersion=8.0.32&charset=utf8mb4" > .env.test
 
       - name: Run Doctrine migrations
+        env:
+          KERNEL_CLASS: "App\Kernel"
         run: ./bin/console doctrine:migrations:migrate --env=test --no-interaction
 
       - name: Run fixtures
+        env:
+          KERNEL_CLASS: "App\Kernel"
         run: ./bin/console doctrine:fixtures:load --env=test --no-interaction
 
       - name: Run PHPUnit tests
         env:
+          KERNEL_CLASS: "App\Kernel"
           DATABASE_URL: mysql://user_test:password_test@127.0.0.1:3306/forgequest_db?serverVersion=8.0.32&charset=utf8mb4
         run: ./bin/phpunit tests
 
