--- a/phpstan.dist.neon
+++ b/phpstan.dist.neon
@@ -1,4 +1,6 @@
 parameters:
+    symfony:
+        container_xml_path: var/cache/dev/App_KernelDevDebugContainer.xml
     level: 8
     paths:
         - bin/
