--- a/config/services.yaml
+++ b/config/services.yaml
@@ -21,3 +21,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\EventListener\GlobalCreatedAtListener:
+        tags:
+            - { name: kernel.event_listener, event: 'easy_admin.event.before_entity_persisted' }
